[tool.poetry]
name = "twitch-gemini-analyzer"
version = "0.1.0"
description = "Analyze Twitch streams using Google's Gemini 2.0 Flash model"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "twitch_gemini_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
google-genai = "^0.2.0"
python-dotenv = "^1.0.0"
streamlink = "^6.5.1"
typer = "^0.9.0"
websockets = "^13.0"
opencv-python = "^4.9.0"
numpy = "^1.26.0"
sounddevice = "^0.4.6"
scipy = "^1.11.0"
Pillow = "^10.2.0"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
